module update from core change: change the way we store versioning and module info to package.json

--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "highend-hog4",
-  "version": "0.0.1",
+  "version": "1.0.0",
+	"api_version": "1.0.0",
+	"keywords": [ "Lighting" ],
+	"manufacturer": "High End Systems",
+	"product": "Hog 4",
+	"shortname": "hog",
   "description": "Module to control High End Systems Hog 4 Consoles",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "Hog4",
-    "HES",
-    "HighEnd",
-    "OSC"
-  ],
-  "author": "Per Røine",
+  "author": "Per Røine <per.roine@gmail.com>",
   "license": "MIT"
 }
