--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "highend-hog4",
-  "version": "1.0.0",
-	"api_version": "1.0.0",
+	"name": "highend-hog4",
+	"version": "1.0.1",
+	"api_version": "1.0.1",
 	"keywords": [ "Lighting" ],
 	"manufacturer": "High End Systems",
 	"product": "Hog 4",
 	"shortname": "hog",
-  "description": "Module to control High End Systems Hog 4 Consoles",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Per Røine <per.roine@gmail.com>",
-  "license": "MIT"
+	"description": "Module to control High End Systems Hog 4 Consoles",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"author": "Keith Rocheck <keith.rocheck@gmail.com>",
+	"license": "MIT"
 }
