--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "highend-hog4",
-	"version": "1.0.2",
+	"version": "1.1.0",
 	"api_version": "1.0.1",
 	"keywords": [
 		"Lighting"
@@ -9,10 +9,18 @@
 	"product": "Hog 4",
 	"shortname": "hog4",
 	"description": "Module to control High End Systems Hog 4 Consoles",
+	"homepage": "https://github.com/bitfocus/companion-module-highend-hog4#readme",
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/bitfocus/companion-module-highend-hog4.git"
+	},
 	"author": "Keith Rocheck <keith.rocheck@gmail.com>",
-	"license": "MIT"
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/bitfocus/companion-module-highend-hog4/issues"
+	}
 }
